--- a/index.html
+++ b/index.html
@@ -127,277 +127,10 @@
 </body>
 <!-- <script src="../echarts.min.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-<script src="./echarts.js"></script>
-<script src="./china.js"></script>
-<script src="./example1.js"></script>
-<!-- <script>
-    var app = new Vue({
-        el: '#app',
-        data: {
+<script src="./js/echarts.js"></script>
+<script src="./js/china.js"></script>
+<script src="./js/example1.js"></script>
 
-        },
-        mounted() {
-            // 1
-            var myChart = echarts.init(document.getElementById('main'));
-            var option = {
-                color: ['#1c70ff'],
-                title: {
-                    text: '待收资产规模及占比',
-                    left: 'center',
-                    textStyle: {
-                        color: "#fff"
-                    }
-                },
-                tooltip: {
-                    trigger: 'axis',
-                    axisPointer: { // 坐标轴指示器，坐标轴触发有效
-                        type: 'shadow' // 默认为直线，可选为：'line' | 'shadow'
-                    }
-                },
-                grid: {
-                    left: '3%',
-                    right: '4%',
-                    bottom: '3%',
-                    containLabel: true
-                },
-                xAxis: [{
-                    type: 'category',
-                    data: ['1-12期', '12-24期', '24-36期'],
-                    axisTick: {
-                        alignWithLabel: true
-                    },
-                    axisLine: {
-                        lineStyle: {
-                            color: '#fff'
-                        }
-                    }
-                }],
-                yAxis: [{
-                    type: 'value',
-                    axisLine: {
-                        lineStyle: {
-                            color: '#fff'
-                        }
-                    }
-                }],
-                series: [{
-                    name: '占比',
-                    type: 'bar',
-                    barWidth: '30',
-                    data: [10, 52, 200]
-                }]
-            };
-            myChart.setOption(option);
-            // 2
-            var myChart1 = echarts.init(document.getElementById('main1'));
-            var option1 = {
-                color: ['#31b1e5', '#064eb6', '#e5e5e5'],
-                tooltip: {
-                    trigger: 'item',
-                    formatter: "{a} <br/>{b} : {c} ({d}%)"
-                },
-                legend: {
-                    orient: 'vertical',
-                    left: 'right',
-                    top: 'bottom',
-                    data: ['直接访问', '邮件营销', '联盟广告'],
-                    textStyle: {
-                        color: '#fff'
-                    }
-                },
-                series: [{
-                    name: '访问来源',
-                    type: 'pie',
-                    radius: '55%',
-                    center: ['50%', '60%'],
-                    data: [{
-                            value: 335,
-                            name: '直接访问'
-                        },
-                        {
-                            value: 310,
-                            name: '邮件营销'
-                        },
-                        {
-                            value: 234,
-                            name: '联盟广告'
-                        }
-                    ],
-                    itemStyle: {
-                        emphasis: {
-                            shadowBlur: 10,
-                            shadowOffsetX: 0,
-                            shadowColor: 'rgba(0, 0, 0, 0.5)'
-                        }
-                    }
-                }]
-            };
-            myChart1.setOption(option1);
-            // 3
-            var myChart2 = echarts.init(document.getElementById('main2'));
-            var option2 = {
-                color: ['#1c70ff'],
-                title: {
-                    text: '待收资产规模及占比',
-                    left: 'center',
-                    textStyle: {
-                        color: "#fff"
-                    }
-                },
-                tooltip: {
-                    trigger: 'axis',
-                    axisPointer: { // 坐标轴指示器，坐标轴触发有效
-                        type: 'shadow' // 默认为直线，可选为：'line' | 'shadow'
-                    }
-                },
-                grid: {
-                    left: '3%',
-                    right: '4%',
-                    bottom: '3%',
-                    containLabel: true
-                },
-                xAxis: [{
-                    type: 'category',
-                    data: ['1-12期', '12-24期', '24-36期'],
-                    axisTick: {
-                        alignWithLabel: true
-                    },
-                    axisLine: {
-                        lineStyle: {
-                            color: '#fff'
-                        }
-                    }
-                }],
-                yAxis: [{
-                    type: 'value',
-                    axisLine: {
-                        lineStyle: {
-                            color: '#fff'
-                        }
-                    }
-                }],
-                series: [{
-                    name: '占比',
-                    type: 'bar',
-                    barWidth: '30',
-                    data: [10, 52, 200]
-                }]
-            };
-            myChart2.setOption(option2);
-            //4
-            var myChart3 = echarts.init(document.getElementById('main3'));
-            var option3 = {
-                tooltip: {
-                    trigger: 'item',
-                    formatter: "{a} <br/>{b}: {c} ({d}%)"
-                },
-                color: ['#b7b7b7', '#1d71ff'],
-                legend: {
-                    orient: 'vertical',
-                    x: 'left',
-                    data: ['未处理', '已处理'],
-                    textStyle: {
-                        color: '#fff'
-                    },
-                    left: 'right',
-                    top: 'bottom'
-                },
-                series: [{
-                    name: '违章是否处理',
-                    type: 'pie',
-                    radius: ['50%', '70%'],
-                    avoidLabelOverlap: false,
-                    label: {
-                        normal: {
-                            show: false,
-                            position: 'center'
-                        },
-                        emphasis: {
-                            show: true,
-                            textStyle: {
-                                fontSize: '30',
-                                fontWeight: 'bold'
-                            }
-                        }
-                    },
-                    labelLine: {
-                        normal: {
-                            show: false
-                        }
-                    },
-                    data: [{
-                            value: 335,
-                            name: '未处理'
-                        },
-                        {
-                            value: 310,
-                            name: '已处理'
-                        }
-                    ]
-                }]
-            };
-            myChart3.setOption(option3);
-            // 5
-            var myChart4 = echarts.init(document.getElementById('main4'));
-            var option4 = {
-                tooltip: {
-                    trigger: 'item',
-                    formatter: "{a} <br/>{b}: {c} ({d}%)"
-                },
-                color: ['#b7b7b7', '#1d71ff'],
-                legend: {
-                    orient: 'vertical',
-                    x: 'left',
-                    data: ['未处理', '已处理'],
-                    textStyle: {
-                        color: '#fff'
-                    },
-                    left: 'right',
-                    top: 'bottom'
-                },
-                series: [{
-                    name: '当月债权',
-                    type: 'pie',
-                    radius: ['50%', '70%'],
-                    avoidLabelOverlap: false,
-                    label: {
-                        normal: {
-                            show: false,
-                            position: 'center'
-                        },
-                        emphasis: {
-                            show: true,
-                            textStyle: {
-                                fontSize: '30',
-                                fontWeight: 'bold'
-                            }
-                        }
-                    },
-                    labelLine: {
-                        normal: {
-                            show: false
-                        }
-                    },
-                    data: [{
-                            value: 335,
-                            name: '未处理'
-                        },
-                        {
-                            value: 310,
-                            name: '已处理'
-                        }
-                    ]
-                }]
-            };
-            myChart4.setOption(option4);
-            //map
-            
-        },
-        methods: {
-
-        }
-    })
-</script> -->
 <script>
      // 1
      var myChart = echarts.init(document.getElementById('main'));
